# inheco_incubator_module

./: .gitignore  .pre-commit-config.yaml  README.md  default.node.info.yaml  default.node.yaml  pyproject.toml  ruff.toml
definitions/: inheco.node.yaml  inheco_irene_2.0.info.yaml  inheco_irene_2.0.node.yaml  inheco_irene_2.1.info.yaml  inheco_iris_2.1.info.yaml  inheco_iris_2.1.node.yaml
examples/: example_interface_usage.py  example_madsci_workflow.yaml  interface_usage_example.py  wei_workflow_usage_example.yaml
src/: inheco_incubator_interface.py  inheco_incubator_module.py  inheco_incubator_rest_node.py  inheco_interface_FastAPI_wrapper.py  pydantic_models.py
