[project]
name = "tekmatic_incubator_module"
version = "0.0.1"
description = "A REST node to control Tekmatic Single Plate Incubators"
authors = [{name = "Casey Stone", email="cstone@anl.gov"}]
dependencies = [
    "fastapi>=0.103",
    "uvicorn>=0.14.0",
    "madsci.node_module~=0.8.0",
    "madsci.client~=0.8.0",
    "madsci.common~=0.8.0",
    "pytest",
    "pythonnet",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/inheco_incubator_module"

######################
# Build Info + Tools #
######################
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
    "pytest",
]
